# fluxloop-tutorials

./: README.md
langgraph/customer-support/: .gitignore  FLUXLOOP.md  README.md  pyproject.toml  transition-plan.md
langgraph/customer-support/fluxloop_projects/tutorial/: .gitignore
langgraph/customer-support/fluxloop_projects/tutorial/configs/: evaluation.yaml  input.yaml  project.yaml  simulation.yaml
langgraph/customer-support/fluxloop_projects/tutorial/examples/: simple_agent.py
langgraph/customer-support/fluxloop_projects/tutorial/experiments/artifacts/: observations.jsonl  traces.jsonl
langgraph/customer-support/fluxloop_projects/tutorial/experiments/tutorial_experiment_20251115_233438/: errors.json  observations.jsonl  summary.json  trace_summary.jsonl  traces.jsonl
langgraph/customer-support/fluxloop_projects/tutorial/experiments/tutorial_experiment_20251116_163238/: observations.jsonl  summary.json  trace_summary.jsonl  traces.jsonl
langgraph/customer-support/fluxloop_projects/tutorial/inputs/: generated.yaml
langgraph/customer-support/src/customer_support/: __init__.py  assistant.py  main.py
langgraph/customer-support/src/customer_support/data/: travel_db.py
langgraph/customer-support/src/customer_support/graphs/: __init__.py  part1.py  part2.py  part3.py  part4.py
langgraph/customer-support/src/customer_support/tools/: __init__.py  base.py  cars.py  excursions.py  flights.py  hotels.py  policies.py
langgraph/customer-support/src/customer_support/utils/: console.py  environment.py  langgraph.py
(+36 files in other folders)
