[project]
name = "customer-support"
version = "0.1.0"
description = "Console-based LangGraph customer support bot tutorial conversion."
authors = [{ name = "FluxLoop Tutorials" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.0.57",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-anthropic>=0.1.0",
    "langchain-openai>=0.1.0",
    "openai>=1.37.0",
    "tavily-python>=0.3.5",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "pydantic>=2.7.0",
    "pytz>=2023.3",
    "typing-extensions>=4.8.0",
    "fluxloop==0.1.6",
    "fluxloop-cli==0.2.24",
    "fluxloop-mcp>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "ruff>=0.5.0"]

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py310"

